<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/media_format_chooser"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:attr/titleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_encode_config_h_264_avc" />

            <com.microsoft.hydralab.android.client.view.NamedSpinner
                android:id="@+id/video_codec"
                android:name="@string/video_encoder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <com.microsoft.hydralab.android.client.view.NamedSpinner
                android:id="@+id/resolution"
                android:name="@string/resolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/video_resolutions" />

            <com.microsoft.hydralab.android.client.view.NamedSpinner
                android:id="@+id/video_bitrate"
                android:name="@string/bitrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/video_bitrates" />

            <com.microsoft.hydralab.android.client.view.NamedSpinner
                android:id="@+id/framerate"
                android:name="@string/frame_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/video_framerates" />

            <com.microsoft.hydralab.android.client.view.NamedSpinner
                android:id="@+id/iframe_interval"
                android:name="@string/frame_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:entries="@array/iframeintervals" />

            <com.microsoft.hydralab.android.client.view.NamedSpinner
                android:id="@+id/avc_profile"
                android:name="@string/avc_profle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <com.microsoft.hydralab.android.client.view.NamedSpinner
                android:id="@+id/orientation"
                android:name="@string/orientation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/orientations" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/with_audio"/>

                <Switch
                    android:id="@+id/with_audio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textOff="@string/without_audio"
                    android:textOn="@string/with_audio" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/audio_format_chooser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    style="?android:attr/titleTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_encode_config_h_264_aac" />

                <com.microsoft.hydralab.android.client.view.NamedSpinner
                    android:id="@+id/audio_codec"
                    android:name="@string/audio_encoder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <com.microsoft.hydralab.android.client.view.NamedSpinner
                    android:id="@+id/audio_channel_count"
                    android:name="@string/channels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:entries="@array/audio_channels" />

                <com.microsoft.hydralab.android.client.view.NamedSpinner
                    android:id="@+id/sample_rate"
                    android:name="@string/sample_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <com.microsoft.hydralab.android.client.view.NamedSpinner
                    android:id="@+id/audio_bitrate"
                    android:name="@string/bitrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

                <com.microsoft.hydralab.android.client.view.NamedSpinner
                    android:id="@+id/aac_profile"
                    android:name="@string/aac_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/place_holder"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerInParent="true"
        android:src="@mipmap/ic_launcher_foreground"
        android:contentDescription="@string/placeholder_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/debug_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/record_button"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@android:drawable/ic_menu_info_details"
            android:contentDescription="@string/debug" />
        <Button
            android:id="@+id/record_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/start_recorder" />
    </RelativeLayout>
</RelativeLayout>
